--- a/libs/core/pom.xml
+++ b/libs/core/pom.xml
@@ -90,7 +90,11 @@
 			<version>1.5.3.Final</version>
 			<scope>provided</scope>
 		</dependency>
-        <!--		<dependency>-->
+		<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-commons</artifactId>
+		</dependency>
+		<!--		<dependency>-->
 <!--			<groupId>org.springframework.boot</groupId>-->
 <!--			<artifactId>spring-boot-starter-web</artifactId>-->
 <!--		</dependency>-->
