--- a/spring-security/admin/pom.xml
+++ b/spring-security/admin/pom.xml
@@ -189,11 +189,11 @@
 			<version>42.5.4</version>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/com.microsoft.sqlserver/mssql-jdbc -->
-		<dependency>
-			<groupId>com.microsoft.sqlserver</groupId>
-			<artifactId>mssql-jdbc</artifactId>
-			<version>12.2.0.jre8</version> <!-- Kiểm tra phiên bản mới nhất nếu cần -->
-		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>com.microsoft.sqlserver</groupId>-->
+<!--			<artifactId>mssql-jdbc</artifactId>-->
+<!--			<version>12.2.0.jre8</version> &lt;!&ndash; Kiểm tra phiên bản mới nhất nếu cần &ndash;&gt;-->
+<!--		</dependency>-->
 		<dependency>
 			<groupId>org.mapstruct</groupId>
 			<artifactId>mapstruct</artifactId>
