--- a/spring-cloud/config/src/main/resources/config/admin-service.yml
+++ b/spring-cloud/config/src/main/resources/config/admin-service.yml
@@ -24,34 +24,34 @@ management:
 #  Connection url for the database alinadbdev?currentSchema=qlhanhchinhnhansu
 spring:
 
-#  jpa:
-#    show-sql: true
-#    hibernate:
-#      ddl-auto: update
-#
-#    properties:
-#      hibernate:
-#        default_schema: admin_service
-#        format_sql: true
-#        dialect: org.hibernate.dialect.PostgreSQLDialect
+  jpa:
+    show-sql: true
+    hibernate:
+      ddl-auto: update
 
-#  datasource:
-#    driver-class-name: org.postgresql.Driver
-#    url: jdbc:postgresql://dpg-cr2biddsvqrc73cmha8g-a.oregon-postgres.render.com:5432/database_mcrs?currentSchema=admin_service
-#    username: mcrs
-#    password: fFBHB0ZRkEOpdVIlwDRtDpPeaJs0HMJx
-#    dbcp2:
-#      test-while-idle: true
-#      validation-query: SELECT 1
+    properties:
+      hibernate:
+        default_schema: public
+        format_sql: true
+        dialect: org.hibernate.dialect.PostgreSQLDialect
 
   datasource:
-    driver-class-name: com.microsoft.sqlserver.jdbc.SQLServerDriver
-    url: jdbc:sqlserver://127.0.0.1:1433;databaseName=admin_service;encrypt=true;trustServerCertificate=true;
-    username: sa
-    password: 123
+    driver-class-name: org.postgresql.Driver
+    url: jdbc:postgresql://42.96.41.119:5432/mcrs_2024
+    username: postgres
+    password: bvtn@123
     dbcp2:
       test-while-idle: true
       validation-query: SELECT 1
+
+#  datasource:
+#    driver-class-name: com.microsoft.sqlserver.jdbc.SQLServerDriver
+#    url: jdbc:postgresql://42.96.41.119:5432/mcrs_2024
+#    username: postgres
+#    password: bvtn@123
+#    dbcp2:
+#      test-while-idle: true
+#      validation-query: SELECT 1
 
 #  jpa:
 #    hibernate:
